--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div id="main"></div>
 
-  <script src="/public/vendor/react/min.js"></script>
-  <script src="/public/vendor/react-dom/min.js"></script>
+  <script src="public/vendor/react/min.js"></script>
+  <script src="public/vendor/react-dom/min.js"></script>
 
-  <script src="/public/main.js"></script>
+  <script src="public/main.js"></script>
 </body>
 </html>
